--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/MySokoban FX/nbproject/private/
-/MySokoban FX/build/
-/MySokoban FX/dist/
-/.idea/
-/out/
+MySokoban FX/nbproject/private/
+MySokoban FX/build/
+MySokoban FX/dist/
+.idea/
+out/
+*/.idea/*
 *.iml
